--- a/styles.css
+++ b/styles.css
@@ -27,122 +27,21 @@ div.gameboard {
    border-radius: 50%;
 }
 
-/*Simon Buttons*/
-/*Top Left*/
-#simon-button-top-left{
-  position:relative;
-  width:260px;
-  height:260px;
-  border-radius:100% 0 0 0;
-  top: 5%;
-  left: 5%;
-  background:rgba(0, 128, 0, .60);
+#center-console{
+  position: relative;
+  width:235px;
+  height:235px;
+  border-radius:50%;
+  background: red;
+  z-index: 1; 
+  margin:0 auto;
+  bottom:61%;
 }
 
-#simon-button-top-left:active{
-  background:rgba(0, 128, 0, 1);
-}
-
-#simon-button-top-left:after{
+h2.game-name{
   position: absolute;
-  content: "";
-  width:110px;
-  height:110px;
-  border-radius:100% 0 0 0;
-  background: black;
-  top: 150px;
-  left: 150px;
-  right: 0;
-  bottom:0;
+  top:25%;
+  left:25%;
+  margin: 0 auto;
 }
-
-
-
-
-/*Top Right (RED) */
-#simon-button-top-right{
-  position:relative;
-  width:260px;
-  height:260px;
-  border-radius:100% 0 0 0;
-  bottom: 38.4%;
-  left: 50%;
-  background:rgba(255,0,0,.60);
-  transform: rotate(90deg);
-}
-
-#simon-button-top-right:active{
-    background:rgba(255,0,0,1);
-}
-
-#simon-button-top-right:after{
-  position: absolute;
-  content: "";
-  width:110px;
-  height:110px;
-  border-radius:100% 0 0 0;
-  background: black;
-  top: 150px;
-  left: 150px;
-  right: 0;
-  bottom:0;
-}
-
-
-/*Bottom Left (YELLOW)*/
-#simon-button-bottom-left{
-  position:relative;
-  width:260px;
-  height:260px;
-  border-radius:100% 0 0 0;
-  background:rgba(255,255,0,.60);
-  transform: rotate(-90deg);
-  bottom: 36%;
-  left:5%;
-}
-
-#simon-button-bottom-left:active{
-  background: rgba(255,255,0,1.00)
-}
-
-#simon-button-bottom-left:after{
-  position: absolute;
-  content: "";
-  width:110px;
-  height:110px;
-  border-radius:100% 0 0 0;
-  background:black;
-  top: 150px;
-  left: 150px;
-  right: 0;
-  bottom:0;
-}
-
-
-
-/*Bottom Right (BLUE)*/
-#simon-button-bottom-right{
-  position:relative;
-  width:260px;
-  height:260px;
-  border-radius:0 0 100% 0;
-  background:rgba(9,60,255,.60);
-  bottom:79%;
-  left:50%
-}
-
-#simon-button-bottom-right:active{
-  background: rgba(9,60,255,1.00)
-}
-
-
-#simon-button-bottom-right:after{
-  position: absolute;
-  content: "";
-  width:110px;
-  height:110px;
-  border-radius:0 0 100% 0;
-  background:black;
-}
-
 
