--- a/app/buttons.css
+++ b/app/buttons.css
@@ -125,10 +125,15 @@
 #start-button{
     position: absolute;
 	border-radius: 50%;
-	width: 50px;
+    border:3px solid black;
+ 	width: 50px;
 	height: 50px; 
-    background:white;
+    background:rgba(224,255,255,0.83);
     top:50%;
     left:40%;
 	/* width and height can be anything, as long as they're equal */
+}
+
+#start-button:active {
+    background: rgba(224,255,255,1.00);
 }
