--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ div.gameboard {
   width:235px;
   height:235px;
   border-radius:50%;
-  background: red;
+  background: rgb(127, 118, 118);
   z-index: 1; 
   margin:0 auto;
   bottom:61%;
@@ -40,6 +40,7 @@ div.gameboard {
 
 h2.game-name{
   position: absolute;
+  color: white;
   top:25%;
   left:25%;
   margin: 0 auto;
