working observables and flashing buttons

--- a/app/buttons.css
+++ b/app/buttons.css
@@ -11,7 +11,7 @@
 }
 
 #simon-button-top-left:active{
-  background:rgba(0, 128, 0, 1);
+  background:rgba(84,241,13,0.89);
 }
 
 #simon-button-top-left:after{
